php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #15951 ext/ctype doesn't compile on MacOS/X
Submitted: 2002-03-08 05:16 UTC Modified: 2002-03-08 14:54 UTC
Votes:1
Avg. Score:5.0 ± 0.0
Reproduced:1 of 1 (100.0%)
Same Version:1 (100.0%)
Same OS:1 (100.0%)
From: hholzgra@php.net Assigned: hholzgra (profile)
Status: Closed Package: Compile Failure
PHP Version: 4.0CVS-2002-03-0 OS: MacOS/X
Private report: No CVE-ID: None
 [2002-03-08 05:16 UTC] hholzgra@php.net
ext/ctype doesn't compile on MacOS/X
as it doesn't define isalpha() and friends
in a way that makes them passeable as
function pointer arguments :(

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2002-03-08 14:54 UTC] kalowsky@php.net
This bug has been fixed in CVS.

Thanks Hartmut!   Works fine now...
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Wed Sep 02 01:00:02 2026 UTC