reimplementation using macro instead of function pointer ( Bug #15951 )